--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,4 +1,4 @@
-form {
+.map-input-localisation {
     display: flex;
     justify-content: center;
     background-color: #ededed;
@@ -20,4 +20,31 @@ input {
     padding-top: 16px;
     padding-bottom: 16px;
     font-size: 16px;
+}
+
+.explication-reservation-menu {
+    background-color: #F7F7F7;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 56px;
+
+    h2 {
+       margin-top: 0px;
+       padding-top: 42px;
+    }
+
+    h3 {
+       font-weight: lighter;
+    }
+}
+
+.button-explorer-restaurant {
+    border-style: none;
+    padding: 16px 28px;
+    border-radius: 23px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+    color: white;
+    font-size: 16px;
+    background: linear-gradient(#FF79DA, #9356DC);
+    margin-top: 16px;
 }
