--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -1,15 +1,28 @@
+.margin-fonctionnement {
+    margin-left: 14px;
+    margin-top: 46px;
+}
+
 .menu-1 {
     display: flex;
     justify-content: center;
-    border: black solid 1px;
+    background-color: #F7F7F7;
+    border-radius: 24px;
+    box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
     margin: 24px 20px;
+    padding-top: 12px;
+    padding-bottom: 12px;
     position: relative;
 }
 
 .menu-2 {
     display: flex;
     justify-content: center;
-    border: black solid 1px;
+    background-color: #F7F7F7;
+    border-radius: 24px;
+    box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
+    padding-top: 12px;
+    padding-bottom: 12px;
     margin: 24px 20px;
     position: relative;
 }
@@ -17,7 +30,11 @@
 .menu-3 {
     display: flex;
     justify-content: center;
-    border: black solid 1px;
+    background-color: #F7F7F7;
+    border-radius: 24px;
+    box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
+    padding-top: 12px;
+    padding-bottom: 12px;
     margin: 24px 20px;
     position: relative;
 }
@@ -29,6 +46,13 @@
     padding: 2px 7px;
     position: absolute;
     left: -11px;
-    bottom: -2px;
+    bottom: 9px;
 }
 
+.position-icon-fontawesome {
+    position: absolute;
+    left: 38px;
+    bottom: 3px;
+    color: #C6C6C6;
+    font-size: 22px;
+}
