--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 @import url("https://use.fontawesome.com/releases/v5.6.3/css/all.css");
 * {
   outline: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
   margin: 0px;
 }
 
@@ -66,18 +66,31 @@ input {
   margin-top: 16px;
 }
 
+.margin-fonctionnement {
+  margin-left: 14px;
+  margin-top: 46px;
+}
+
 .menu-1 {
   display: flex;
   justify-content: center;
-  border: black solid 1px;
+  background-color: #F7F7F7;
+  border-radius: 24px;
+  box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
   margin: 24px 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   position: relative;
 }
 
 .menu-2 {
   display: flex;
   justify-content: center;
-  border: black solid 1px;
+  background-color: #F7F7F7;
+  border-radius: 24px;
+  box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
+  padding-top: 12px;
+  padding-bottom: 12px;
   margin: 24px 20px;
   position: relative;
 }
@@ -85,7 +98,11 @@ input {
 .menu-3 {
   display: flex;
   justify-content: center;
-  border: black solid 1px;
+  background-color: #F7F7F7;
+  border-radius: 24px;
+  box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.1);
+  padding-top: 12px;
+  padding-bottom: 12px;
   margin: 24px 20px;
   position: relative;
 }
@@ -97,7 +114,28 @@ input {
   padding: 2px 7px;
   position: absolute;
   left: -11px;
-  bottom: -2px;
+  bottom: 9px;
+}
+
+.position-icon-fontawesome {
+  position: absolute;
+  left: 38px;
+  bottom: 3px;
+  color: #C6C6C6;
+  font-size: 22px;
+}
+
+article {
+  background-color: #F7F7F7;
+}
+article h2 {
+  padding-top: 50px;
+  margin-left: 14px;
+}
+
+.cards-restaurant {
+  border: black solid 1px;
+  margin: 20px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
