--- a/sass/_article-restaurants.scss
+++ b/sass/_article-restaurants.scss
@@ -1,13 +1,61 @@
 article {
     background-color: #F7F7F7;
+    padding-bottom: 50px;
+    padding-top: 50px;
 
     h2 {
-        padding-top: 50px;
         margin-left: 14px;
     }
 }
 
 .cards-restaurant {
-    border: black solid 1px;
     margin: 20px 20px;
+    height: 252px;
+    border-radius: 15px;
+    box-shadow: 1px 6px 6px rgba(0, 0, 0, 0.1);
+    background-color: white;
+    position: relative;
+
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 172px;
+        border-radius: 15px 15px 0px 0px;
+    }
+}
+
+.text-cards-restaurant {
+    display: flex;
+    justify-content: space-between;
+}
+
+.bold-p {
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 16px;
+    margin-left: 14px;
+    margin-bottom: 0px;
+}
+
+.margin-text-card {
+    font-size: 18px;
+    margin-left: 14px;
+    margin-top: 4px;
+}
+
+.p-nouveau {
+    background-color: #99E2D0;
+    color: #4CB27F;
+    padding: 10px 16px;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 179px;
+    right: 16px;
+}
+
+.icon-card-heart {
+    position: absolute;
+    right: 26px;
+    bottom: -2px;
+    font-size: 26px;
 }
