--- a/style.css
+++ b/style.css
@@ -83,6 +83,13 @@ input {
   position: relative;
 }
 
+.menu-1:hover {
+  background-color: #F7F1FF;
+}
+.menu-1:hover .position-icon-fontawesome {
+  color: #9356DC;
+}
+
 .menu-2 {
   display: flex;
   justify-content: center;
@@ -95,6 +102,13 @@ input {
   position: relative;
 }
 
+.menu-2:hover {
+  background-color: #F7F1FF;
+}
+.menu-2:hover .position-icon-fontawesome {
+  color: #9356DC;
+}
+
 .menu-3 {
   display: flex;
   justify-content: center;
@@ -105,6 +119,13 @@ input {
   padding-bottom: 12px;
   margin: 24px 20px;
   position: relative;
+}
+
+.menu-3:hover {
+  background-color: #F7F1FF;
+}
+.menu-3:hover .position-icon-fontawesome {
+  color: #9356DC;
 }
 
 .rounded-number {
@@ -127,15 +148,90 @@ input {
 
 article {
   background-color: #F7F7F7;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
 article h2 {
-  padding-top: 50px;
   margin-left: 14px;
 }
 
 .cards-restaurant {
-  border: black solid 1px;
   margin: 20px 20px;
+  height: 252px;
+  border-radius: 15px;
+  box-shadow: 1px 6px 6px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  position: relative;
+}
+.cards-restaurant img {
+  object-fit: cover;
+  width: 100%;
+  height: 172px;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.text-cards-restaurant {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bold-p {
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 16px;
+  margin-left: 14px;
+  margin-bottom: 0px;
+}
+
+.margin-text-card {
+  font-size: 18px;
+  margin-left: 14px;
+  margin-top: 4px;
+}
+
+.p-nouveau {
+  background-color: #99E2D0;
+  color: #4CB27F;
+  padding: 10px 16px;
+  border-radius: 4px;
+  position: absolute;
+  bottom: 179px;
+  right: 16px;
+}
+
+.icon-card-heart {
+  position: absolute;
+  right: 26px;
+  bottom: -2px;
+  font-size: 26px;
+}
+
+footer {
+  background-color: #353535;
+  color: white;
+}
+footer p {
+  margin: 0px;
+}
+
+.font-ohmyfood {
+  font-family: "Shrikhand", "sans-serif";
+  padding-top: 18px;
+  padding-bottom: 18px;
+  margin-left: 20px;
+}
+
+.p-footer {
+  margin-left: 20px;
+  padding-bottom: 8px;
+}
+
+.icon-footer {
+  font-size: 14px;
+}
+
+#contact {
+  padding-bottom: 30px;
 }
 
 /*# sourceMappingURL=style.css.map */
