--- a/style.css
+++ b/style.css
@@ -55,17 +55,6 @@ input {
   font-weight: lighter;
 }
 
-.button-explorer-restaurant {
-  border-style: none;
-  padding: 16px 28px;
-  border-radius: 23px;
-  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
-  color: white;
-  font-size: 16px;
-  background: linear-gradient(#FF79DA, #9356DC);
-  margin-top: 16px;
-}
-
 .margin-fonctionnement {
   margin-left: 14px;
   margin-top: 46px;
@@ -230,8 +219,38 @@ footer p {
   font-size: 14px;
 }
 
-#contact {
+.contact {
   padding-bottom: 30px;
+}
+
+.button-primary {
+  border-style: none;
+  padding: 16px 28px;
+  border-radius: 23px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  color: white;
+  font-size: 16px;
+  background: linear-gradient(#FF79DA, #9356DC);
+  margin-top: 16px;
+}
+
+.img-francaise {
+  object-fit: cover;
+  width: 100%;
+  height: 256px;
+}
+
+.font-h2-francaise {
+  font-family: "Shrikhand", "sans-serif";
+}
+
+.card-generale {
+  background-color: #FFFFFF;
+  position: absolute;
+  top: 204px;
+  border-radius: 46px 46px 0px 0px;
+  width: 100%;
+  padding-top: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
