--- a/sass/menu-francaise/_main-francaise.scss
+++ b/sass/menu-francaise/_main-francaise.scss
@@ -3,3 +3,21 @@
     width: 100%;
     height: 256px;
 }
+
+.h1-main-heart {
+    display: flex;
+    justify-content: space-between;
+
+    h1 {
+        padding-left: 16px;
+        font-weight: lighter;
+    }
+
+    p {
+        padding-right: 38px;
+    }
+
+    h1, p {
+        font-size: 28px;
+    }
+}
