--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Shrikhand&display=swap');
 
 // fontawesome
-@import url('https://use.fontawesome.com/releases/v5.6.3/css/all.css');
+
+@import url("https://use.fontawesome.com/releases/v5.6.3/css/all.css");
 
 // components index
 @import "index/_defaults.scss";
@@ -11,7 +12,7 @@
 @import "index/_article-restaurants.scss";
 @import "index/_footer.scss";
 @import "index/_button.scss";
-@import "menu-francaise/_main-francaise.scss";
-@import "menu-francaise/_cards-francaise.scss";
 
 // components menu a la françaises
+@import "menu-francaise/_main-francaise.scss";
+@import "menu-francaise/_cards-francaise.scss";
