finition de la page menu a la française, réfacto et création des liens

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -8,3 +8,15 @@
     background: linear-gradient(#FF79DA, #9356DC);
     margin-top: 16px;
 }
+
+.display-flex-commander {
+    display: flex;
+    justify-content: center;
+    padding-top: 16px;
+    padding-bottom: 76px;
+    background-color: #F6F6F6;
+}
+
+.button-commander {
+    padding: 16px 58px;
+}
