--- a/sass/components/_defaults.scss
+++ b/sass/components/_defaults.scss
@@ -14,3 +14,8 @@ header {
     padding-bottom: 16px;
     box-shadow: 0 5px 6px -3px rgba(0, 0, 0, 0.2);
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
