--- a/sass/components/_main-pages-menu.scss
+++ b/sass/components/_main-pages-menu.scss
@@ -14,7 +14,9 @@
     }
 
     p {
-        padding-right: 38px;
+        position: absolute;
+        right: 36px;
+        top: 10px;
     }
 
     h1, p {
