--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,3 +1,6 @@
+$pink: #FF79DA;
+$purple: #9356DC;
+
 .button-primary {
     border-style: none;
     padding: 16px 28px;
@@ -5,8 +8,13 @@
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
     color: white;
     font-size: 16px;
-    background: linear-gradient(#FF79DA, #9356DC);
+    background: linear-gradient($pink, $purple);
     margin-top: 16px;
+
+    &:hover {
+        background: linear-gradient(lighten($pink, 5%), lighten($purple, 5%));
+        box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+    }
 }
 
 .display-flex-commander {
