--- a/style.css
+++ b/style.css
@@ -265,6 +265,10 @@ footer p {
   background: linear-gradient(#FF79DA, #9356DC);
   margin-top: 16px;
 }
+.button-primary:hover {
+  background: linear-gradient(#ff93e1, #a16be0);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+}
 
 .display-flex-commander {
   display: flex;
