ajout effet ... sur menu palette

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,4 @@
 @import "components/_footer.scss";
 @import "components/_button.scss";
 @import "components/_main-pages-menu.scss";
+@import "components/_keyframes.scss";
